[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "alphabet-detector>=0.0.7",
    "contextily>=1.2.0",
    "eccodes>=1.3.3",
    "emoji>=1.6.1",
    "folium>=0.12.1.post1",
    "gensim>=4.1.2",
    "geographiclib>=1.52",
    "geopy>=2.2.0",
    "google-auth>=2.3.3",
    "google-auth-oauthlib>=0.4.6",
    "grpcio>=1.42.0",
    "imutils>=0.5.4",
    "keras>=2.7.0",
    "Keras-Applications>=1.0.4",
    "Keras-Preprocessing>=1.1.2",
    "Markdown>=3.3.6",
    "matplotlib",
    "netCDF4>=1.5.8",
    "networkx>=2.6.3",
    "nltk",
    "numcodecs>=0.9.1",
    "numpy",
    "oauthlib>=3.1.1",
    "opencv-python>=4.5.4.60",
    "pandas>=1.3.4",
    "Pillow",
    "plotly>=5.4.0",
    "protobuf>=3.19.1",
    "pycosat>=0.6.3",
    "pycountry>=20.7.3",
    "pycountry-convert>=0.7.2",
    "requests",
    "requests-oauthlib>=1.3.0",
    "scikit-image>=0.18.3",
    "scikit-learn>=1.0.1",
    "scipy",
    "seaborn",
    "Shapely>=1.8.0",
    "smop>=0.41",
    "statsmodels>=0.12.2",
    "tensorboard>=2.7.0",
    "tensorboard-data-server>=0.6.1",
    "tensorboard-plugin-wit>=1.8.0",
    "tensorflow>=2.7.0",
    "tensorflow-estimator>=2.7.0",
    "tensorflow-io-gcs-filesystem>=0.22.0",
    "wordcloud>=1.8.1",
    "xarray>=0.20.1",
    "xgboost>=1.5.0",
    "xhtml2pdf>=0.2.5",
    "geopandas",
]
build-backend = "setuptools.build_meta"