[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "pandas",
    "numpy",
    "tensorflow",
    "scikit-learn",
    "seaborn",
    "matplotlib",
    "wordcloud",
    "keras",
    "plotly",
    "xgboost",
    "opencv-python",
    "scikit-image",
    "unidecode",
    "emoji",
    "textblob",
    "contextily",
]
build-backend = "setuptools.build_meta"