[metadata]
name = data-science-toolkit
version = 0.0.7
author = EL HACHIMI CHOUAIB
author_email = elhachimi.ch@gmail.com
description = Data Science Toolkit (DST) is a Python library that helps implement data science related project with ease.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/elhachimi-ch/dst
project_urls =
    Bug Tracker = https://github.com/elhachimi-ch/dst/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src